# chat-boards

./: .gitignore  CMakeLists.txt  README.md  conanfile.txt
client/: CMakeLists.txt  GUI.cpp  GUI.h  main.cpp
server/: CMakeLists.txt  main.cpp
shared/: CMakeLists.txt  CerealSerializer.cpp  CerealSerializer.h  Data.cpp  Data.h
src/: CMakeLists.txt  GUI.cpp  GUI.h  SampleClass.cpp  main.cpp
